[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-sql-query-fixer"
version = "0.1.0"
description = "SQL Query Fixer OpenEnv environment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.30.1",
    "pydantic==2.7.1",
    "requests==2.32.3",
    "openai==1.30.5",
]
